# ZarPresence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  templates-installer.nsi  updates.json  vite.extension.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  installer.nsh  installer.nsi  tauri.conf.json
src-tauri/src/: config.rs  discord.rs  install.rs  main.rs  ws.rs
src/extension/: background.ts  crunchyroll.ts  index.html  manifest.json  package-lock.json  package.json  spotify.ts  tsconfig.json  youtube.ts
src/shared-types/: index.ts  package.json
