[package]
name = "zarpresence"
version = "1.0.0"
authors = ["ZarScape"]
edition = "2021"

[dependencies]
discord-rich-presence = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "1.6", features = [ "notification-all", "window-all", "system-tray", "shell-open", "custom-protocol"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
window-vibrancy = "0.4.1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
